# File_Log

./: .gitignore  Event Flow Diagram.md  Overall Diagram.md  Sequence Diagram.md  VS Code Git workflow.md  dbsetup.sql  foldersetup.bat  folderstructure.md  main.py  pyproject.toml
app/db/: connection.py  queries.py
app/models/: app_model.py  file_model.py  session_model.py
app/utils/: logging_config.py
app/watcher/: app_registry.py  process_inspector.py  session_tracker.py
app/watcher/handlers/: notepad_handler.py
scripts/: setup_db.py
